# travel-hack-2024

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: __main__.py  app.py  schemas.py  settings.py
backend/routers/: __init__.py  system.py  tours.py
backend/services/: tours_service.py
frontend/: package-lock.json  package.json
frontend/src/: index.css  index.js
frontend/src/components/App/: App.js
frontend/src/components/BigField/: BigField.css  BigField.js
frontend/src/components/Booking-Old/: Booking.css  Booking.js
frontend/src/components/Button/: Button.css  Button.js
frontend/src/components/Catalog/: Catalog.css  Catalog.js
frontend/src/components/DateField/: DateField.css  DateField.js
frontend/src/components/DefaultCheckbox/: DefaultCheckbox.css  DefaultCheckbox.js
frontend/src/components/DefaultField/: DefaultField.css  DefaultField.js
frontend/src/components/ExtraPayment/: ExtraPayment.js
frontend/src/components/Header/: Header.css  Header.js
frontend/src/components/Profile/: Profile.css  Profile.js
frontend/src/components/Tour/: Tour.css  Tour.js
frontend/src/components/TouristsField/: TouristsField.css  TouristsField.js
