[tool.poetry]
name = "travelhack-2024"
version = "0.1.0"
description = ""
authors = ["GoshkaLP <rybkin.georgy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
